// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Docker connector Wizard should render form 1`] = `
<div>
  <section
    class="wrapper"
  >
    <div
      class="StepWizard--main StepWizard--navBar"
    >
      <div
        class="StepWizard--navBarList"
      >
        <div
          class="StepWizard--navStep StepWizard--activeStep"
        >
          <span
            class="StepWizard--number"
          >
            1
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            CONNECTOR DETAILS
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            2
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            AUTHENTICATION
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            3
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            VERIFY CONNECTION
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            4
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            ARTIFACT SOURCE
          </p>
        </div>
      </div>
      <div
        class="StepWizard--stepDetails"
      >
         
        <div
          class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
        >
          <div
            class="heading"
          >
            Overview
          </div>
          <div
            class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
          >
            <div
              class="OverlaySpinner--overlaySpinner"
            >
              <form
                class="FormikForm--main"
              >
                <div>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="min-height: 460px;"
                  >
                    <div
                      class="StyledProps--font StyledProps--main main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main connectorFormNameWrapper"
                      >
                        <div
                          class="StyledProps--font StyledProps--main connectorFormNameElm"
                        >
                          <div
                            class="InputWithIdentifier--txtNameContainer"
                          >
                            <div
                              class="Layout--horizontal StyledProps--main InputWithIdentifier--txtIdContainer"
                            >
                              <p
                                class="StyledProps--font StyledProps--main"
                              >
                                ID
                                :
                              </p>
                              <span
                                class="InputWithIdentifier--idInput"
                                contenteditable="true"
                              />
                              <span
                                class="bp3-icon bp3-icon-edit StyledProps--main"
                                icon="edit"
                                style="vertical-align: middle;"
                              >
                                <svg
                                  data-icon="edit"
                                  height="12"
                                  viewBox="0 0 16 16"
                                  width="12"
                                >
                                  <desc>
                                    edit
                                  </desc>
                                  <path
                                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </div>
                            <div
                              class="bp3-form-group"
                              data-id="name-0"
                            >
                              <label
                                class="bp3-label"
                                for="name"
                              >
                                Name
                                 
                                <span
                                  class="bp3-text-muted"
                                />
                              </label>
                              <div
                                class="bp3-form-content"
                              >
                                <div
                                  class="bp3-input-group"
                                >
                                  <input
                                    autocomplete="off"
                                    class="bp3-input"
                                    name="name"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                          style="justify-content: center;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--color StyledProps--color-blue500"
                          >
                            + Description
                          </p>
                          <p
                            class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--color StyledProps--color-blue500"
                          >
                            + Tags
                          </p>
                        </div>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main connectorFormElm"
                      >
                        
                      </div>
                    </div>
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <button
                      class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                      type="submit"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span>
                          No valid template with id "saveAndContinue" found in any namespace
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Create Docker connector Wizard should render form 2`] = `
<div>
  <section
    class="wrapper"
  >
    <div
      class="StepWizard--main StepWizard--navBar"
    >
      <div
        class="StepWizard--navBarList"
      >
        <div
          class="StepWizard--navStep StepWizard--activeStep"
        >
          <span
            class="StepWizard--number"
          >
            1
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            CONNECTOR DETAILS
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            2
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            AUTHENTICATION
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            3
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            VERIFY CONNECTION
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            4
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            ARTIFACT SOURCE
          </p>
        </div>
      </div>
      <div
        class="StepWizard--stepDetails"
      >
         
        <div
          class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
        >
          <div
            class="heading"
          >
            Overview
          </div>
          <div
            class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
          >
            <div
              class="OverlaySpinner--overlaySpinner"
            >
              <form
                class="FormikForm--main"
              >
                <div>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="min-height: 460px;"
                  >
                    <div
                      class="StyledProps--font StyledProps--main main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main connectorFormNameWrapper"
                      >
                        <div
                          class="StyledProps--font StyledProps--main connectorFormNameElm"
                        >
                          <div
                            class="InputWithIdentifier--txtNameContainer"
                          >
                            <div
                              class="Layout--horizontal StyledProps--main InputWithIdentifier--txtIdContainer"
                            >
                              <p
                                class="StyledProps--font StyledProps--main"
                              >
                                ID
                                :
                              </p>
                              <span
                                class="InputWithIdentifier--idInput"
                                contenteditable="true"
                              >
                                dummy_name
                                
                              </span>
                              <span
                                class="bp3-icon bp3-icon-edit StyledProps--main"
                                icon="edit"
                                style="vertical-align: middle;"
                              >
                                <svg
                                  data-icon="edit"
                                  height="12"
                                  viewBox="0 0 16 16"
                                  width="12"
                                >
                                  <desc>
                                    edit
                                  </desc>
                                  <path
                                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </div>
                            <div
                              class="bp3-form-group"
                              data-id="name-0"
                            >
                              <label
                                class="bp3-label"
                                for="name"
                              >
                                Name
                                 
                                <span
                                  class="bp3-text-muted"
                                />
                              </label>
                              <div
                                class="bp3-form-content"
                              >
                                <div
                                  class="bp3-input-group"
                                >
                                  <input
                                    autocomplete="off"
                                    class="bp3-input"
                                    name="name"
                                    type="text"
                                    value="dummy name"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                          style="justify-content: center;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--color StyledProps--color-blue500"
                          >
                            + Description
                          </p>
                          <p
                            class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--color StyledProps--color-blue500"
                          >
                            + Tags
                          </p>
                        </div>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main connectorFormElm"
                      >
                        
                      </div>
                    </div>
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <button
                      class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                      type="submit"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span>
                          No valid template with id "saveAndContinue" found in any namespace
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
